--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,19 @@
     <title>Memory Game</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 
-    <h1>Memory Game</h1>
+    <div class="board">
+        <h1>Memory Game</h1>
+    </div>
     <div id="grid">
     </div>
-    
+    <div class="board">
+        <h1 class="score">Score: <span id="score"></span></h1>
+    </div>
+
     <script src="./app.js"></script>
 </body>
+
 </html>
