updated rock paper scissors game urls

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors Game</title>
-    <link rel="stylesheet" href="/js-games/rock-paper-scissors/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="main">
@@ -21,7 +21,7 @@
             <h2>Results: <span id="results"></span></h2>
         </div>
     </div>
-    <script src="/js-games/rock-paper-scissors/app.js"></script>
+    <script src="./app.js"></script>
 
     <div class="links">
         <li>
